--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "rust_playground"
+name = "rust_book"
 version = "0.1.0"
-authors = ["Arvonit <me@arvind.dev>"]
-edition = "2018"
+authors = ["Arvind <arvind@kasiliya.com>"]
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
